--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,9 @@ body {
 
 /* Globales */
 .contenedor {
-    max-width: 120rem;
-    width: 90%;
+    /* max-width: 120rem;
+    width: 90%; */ /* Estas dos lineas son equivalentes a la de abajo, es una nueva forma de hacerlo en css ahorrando un par de lineas. */
+    width: min(90%, 120rem);
     margin: 0 auto;
 }
 
@@ -90,6 +91,10 @@ img {
     .header__texto {
         margin-top: 15rem;
     }
+}
+
+.barra {
+    padding-top: 4rem;
 }
 
 @media (min-width: 768px) {
@@ -196,4 +201,10 @@ img {
 .widget-curso__label,
 .widget-curso__info {
     font: 2rem
+}
+
+.footer {
+    background-color: var(--negro);
+    padding-bottom: 3rem 0;
+    margin-top: 4rem;
 }
