--- a/css/style.css
+++ b/css/style.css
@@ -73,8 +73,14 @@ img {
 }
 
 /* Headder */
-.header {
+.webp .header {
+    background-image: url(../img/banner.webp);
+}
+
+.no-webp .header {
     background-image: url(../img/banner.jpg);
+}
+.header {
     height: 60rem;
     background-size: cover;
     background-repeat: no-repeat;
@@ -210,7 +216,7 @@ img {
 
 .footer {
     background-color: var(--negro);
-    padding-bottom: 3rem 0;
+    padding-bottom: 3rem;
     margin-top: 4rem;
 }
 
@@ -269,7 +275,7 @@ img {
 }
 
 /* Contacto */
-.contacto__bg {
+.contacto-bg {
     background-image: url(../img/contacto.jpg);
     height: 40rem;
     background-size: cover;
